--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
     <commons-codec.version>1.15</commons-codec.version>
     <commons-collections4.version>4.4</commons-collections4.version>
     <commons-io.version>2.16.0</commons-io.version>
-    <commons-lang.version>2.6</commons-lang.version>
+    <commons-lang3.version>3.19.0</commons-lang3.version>
     <clover.license>${user.home}/clover.license</clover.license>
     <curator.version>5.9.0</curator.version>
     <dependency-check-maven.version>3.2.0</dependency-check-maven.version>
@@ -308,9 +308,9 @@
         <version>${commons-io.version}</version>
       </dependency>
       <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>${commons-lang.version}</version>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons-lang3.version}</version>
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
