--- a/tez-mapreduce/pom.xml
+++ b/tez-mapreduce/pom.xml
@@ -89,8 +89,8 @@
       <artifactId>guava</artifactId>
     </dependency>
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.tez</groupId>
